fix(wallets): :ambulance: align positive/negative sign for rtl language

--- a/packages/wallets/src/features/cashier/modules/Transfer/components/TransferReceipt/TransferReceipt.scss
+++ b/packages/wallets/src/features/cashier/modules/Transfer/components/TransferReceipt/TransferReceipt.scss
@@ -51,4 +51,8 @@
         justify-content: center;
         align-items: center;
     }
+
+    &__amount-conversion {
+        display: inline-flex;
+    }
 }
